--- a/src/css/DiscordStatus.css
+++ b/src/css/DiscordStatus.css
@@ -61,8 +61,14 @@ DISCORD STATUS (DEFAULT)
   display: none !important;
 }
 
-.FriendsListContent .friendlistListContainer .friendGroup.onlineFriends .groupName,
-.FriendsListContent .friendlistListContainer .friendGroup.offlineFriends .groupName {
+.FriendsListContent
+  .friendlistListContainer
+  .friendGroup.onlineFriends
+  .groupName,
+.FriendsListContent
+  .friendlistListContainer
+  .friendGroup.offlineFriends
+  .groupName {
   color: rgb(var(--listtext)) !important;
 }
 
@@ -103,6 +109,8 @@ DISCORD STATUS (DEFAULT)
 
 .ChatTabContent .avatarHolder {
   height: auto !important;
+  width: auto !important;
+  padding-right: 0px !important;
 }
 
 .friend .avatarHolder img.avatar {
@@ -136,7 +144,13 @@ DISCORD STATUS (DEFAULT)
 .compactQuickAccess .friend.quickAccessFriend .avatarHolder .avatarStatus,
 .friendlistListContainer .friend .avatarHolder .avatarStatus,
 .CompactFriendsList .friend .avatarHolder .avatarStatus,
-.MemberListColumn.MemberListViewCompact .friend.ingame .avatarHolder .avatarStatus .contextMenuContents.ChatTabs.CompactFriendsList .ChatTabContent .avatarStatus,
+.MemberListColumn.MemberListViewCompact
+  .friend.ingame
+  .avatarHolder
+  .avatarStatus
+  .contextMenuContents.ChatTabs.CompactFriendsList
+  .ChatTabContent
+  .avatarStatus,
 .ChatTabContent .avatarHolder .avatarStatus {
   height: 33% !important;
   width: 33% !important;
@@ -146,8 +160,8 @@ DISCORD STATUS (DEFAULT)
   border: 1px solid rgb(var(--friendlist)) !important;
   z-index: 4 !important;
   position: absolute;
-  left: 66%;
-  top: 66%;
+  left: 65%;
+  top: 65%;
   transform: none !important;
 }
 
@@ -182,7 +196,10 @@ DISCORD STATUS (DEFAULT)
   height: 17px !important;
 }
 
-.contextMenuContents.ChatTabs.compactView .ChatTabContent .avatarHolder .avatar {
+.contextMenuContents.ChatTabs.compactView
+  .ChatTabContent
+  .avatarHolder
+  .avatar {
   height: 42px !important;
 }
 
@@ -210,12 +227,16 @@ DISCORD STATUS (DEFAULT)
   border-radius: 50px !important;
 }
 
-.miniprofile_miniProfileContent_25Sge .miniprofile_miniProfilePlayer_3cN6K.online .miniprofile_avatarStatus_23H45.miniprofile_miniProfileAvatarStatus_1VgK8 {
+.miniprofile_miniProfileContent_25Sge
+  .miniprofile_miniProfilePlayer_3cN6K.online
+  .miniprofile_avatarStatus_23H45.miniprofile_miniProfileAvatarStatus_1VgK8 {
   background: rgb(var(--online)) !important;
   border-radius: 4px !important;
 }
 
-.miniprofile_miniProfileContent_25Sge .miniprofile_miniProfilePlayer_3cN6K.in-game .miniprofile_avatarStatus_23H45.miniprofile_miniProfileAvatarStatus_1VgK8 {
+.miniprofile_miniProfileContent_25Sge
+  .miniprofile_miniProfilePlayer_3cN6K.in-game
+  .miniprofile_avatarStatus_23H45.miniprofile_miniProfileAvatarStatus_1VgK8 {
   background: rgb(var(--ingame)) !important;
   border-radius: 4px !important;
 }
